--- a/CoinsPayment/view/adminhtml/templates/customer/tab/coins/customer_view.phtml
+++ b/CoinsPayment/view/adminhtml/templates/customer/tab/coins/customer_view.phtml
@@ -5,11 +5,11 @@
 $coins = $block->getCollection($block->getCustomerId());
 $total = $block->getTotalCoins($block->getCustomerId());
 ?>
-<?php if ($coins && count($coins)) : ?>
+<?php if ($coins && count($coins)): ?>
 
 <div class="fieldset-wrapper customer-information">
     <div class="fieldset-wrapper-title">
-        <span class="title"><?= __('Amount of coins') ?></span>
+        <span class="title"><?= $block->escapeHtml(__('Amount of coins')) ?></span>
     </div>
     <div class="total-coins">
         <button id="button" class="add-new-address-button action-basic">
@@ -29,7 +29,7 @@ $total = $block->getTotalCoins($block->getCustomerId());
         </tr>
         </thead>
         <tbody>
-        <?php foreach ($coins as $coin) : ?>
+        <?php foreach ($coins as $coin): ?>
             <tr>
                 <td data-th="<?= $block->escapeHtml(__('Occasion')) ?>" class="col">
                     <?= $coin->getOrderId() ? $block->escapeHtml($coin->getOrderId()) :
@@ -53,7 +53,7 @@ $total = $block->getTotalCoins($block->getCustomerId());
         </tbody>
     </table>
 </div>
-<?php else : ?>
+<?php else: ?>
     <div class="message info empty"><span>
             <?= $block->escapeHtml(__('Customer has placed no orders and received no coins.')) ?></span>
     </div>
@@ -77,7 +77,7 @@ $total = $block->getTotalCoins($block->getCustomerId());
     </div>
 </div>
 
-<script type="text/javascript">
+<script>
     require([
         "jquery",
         "Magento_Ui/js/modal/modal"
@@ -129,7 +129,8 @@ $total = $block->getTotalCoins($block->getCustomerId());
                                                 newCell = newRow.insertCell();
                                                 cellData = result[property]['order_id'];
                                                 if (cellData === null) {
-                                                    newCell.textContent = "<?= $block->escapeHtml(__('Added by Admin')) ?>";
+                                                    newCell.textContent =
+                                                        "<?= $block->escapeHtml(__('Added by Admin')) ?>";
                                                 } else {
                                                     newCell.textContent = cellData;
                                                 }
